# hog.python

./: CMakeLists.txt  NPtoCV.h  README.md  hog.cpp  hog.h  main_python.cpp
